--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
   "files.associations": {
     "iosfwd": "cpp",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "cstdio": "cpp",
+    "vector": "cpp",
+    "string": "cpp",
+    "ostream": "cpp"
   }
 }
