Trying things out without xcode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "cstdio": "cpp",
     "vector": "cpp",
     "string": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "__split_buffer": "cpp"
   }
 }
